--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "ng2-semantic-ui",
-  "version": "0.10.0-alpha.6",
+  "name": "@hochzehn/ng2-semantic-ui",
+  "version": "0.10.0-alpha.6.1",
   "description": "Angular Semantic UI Components",
   "repository": {
     "type": "git",
-    "url": "https://github.com/edcarroll/ng2-semantic-ui/tree/master"
+    "url": "https://github.com/hochzehn/ng2-semantic-ui/tree/master"
   },
   "bugs": {
-    "url": "https://github.com/edcarroll/ng2-semantic-ui/tree/master/issues"
+    "url": "https://github.com/hochzehn/ng2-semantic-ui/tree/master/issues"
   },
-  "author": "https://github.com/edcarroll/ng2-semantic-ui/graphs/contributors",
+  "author": "https://github.com/hochzehn/ng2-semantic-ui/graphs/contributors",
   "keywords": [
     "angular",
     "angular-components",
@@ -89,5 +89,6 @@
     "typescript": "~2.7.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
-  }
+  },
+  "main": "index.js"
 }
