--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "build": "npm run lib:build && npm run demo:build",
     "build:prod": "npm run lib:build:prod && npm run demo:build:prod"
   },
-  "dependencies": {},
+  "dependencies": {
+    "popper.js": "^1.14.0"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.25",
     "@angular-devkit/build-ng-packagr": "~0.803.25",
@@ -79,7 +81,6 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-istanbul": "~0.4.0",
     "ng-packagr": "^5.4.0",
-    "popper.js": "^1.14.0",
     "prismjs": "~1.6.0",
     "rxjs": "^6.0.0",
     "ts-node": "~5.0.1",
