--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hochzehn/ng2-semantic-ui",
-  "version": "0.10.0-alpha.6.11",
+  "version": "0.10.0-alpha.6.12",
   "description": "Angular Semantic UI Components",
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "lib:compile:prod": "ng build lib --prod && npm run lib:compile:locales",
     "lib:build": "npm run lib:lint && npm run lib:compile",
     "lib:build:prod": "npm run lib:lint && npm run lib:compile:prod",
+    "prepare": "npm run lib:build:prod",
     "demo:serve": "ng serve demo --host 0.0.0.0",
     "demo:lint": "ng lint demo",
     "demo:compile": "ng build demo",
@@ -39,9 +40,7 @@
     "build": "npm run lib:build && npm run demo:build",
     "build:prod": "npm run lib:build:prod && npm run demo:build:prod"
   },
-  "dependencies": {
-    "popper.js": "^1.14.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.25",
     "@angular-devkit/build-ng-packagr": "~0.803.25",
@@ -81,6 +80,7 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-remap-istanbul": "~0.4.0",
     "ng-packagr": "^5.4.0",
+    "popper.js": "^1.14.0",
     "prismjs": "~1.6.0",
     "rxjs": "^6.0.0",
     "ts-node": "~5.0.1",
