--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hochzehn/ng2-semantic-ui",
-  "version": "0.10.0-alpha.6.12",
+  "version": "0.10.1-0",
   "description": "Angular Semantic UI Components",
   "repository": {
     "type": "git",
